[package]
name = "rust_nucleo"
version = "0.1.0"
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = { version = "0.7", default-features = false }
panic-halt = "0.2"
bitflags = "1.3"
cortex-m-semihosting = "0.5"
stm32f4xx-hal = "0.11"  # adjust for your STM32 series

[profile.release]
codegen-units = 1
lto = true
debug = true
